force-app/main/default/objects/Enrollment__c/Enrollment__c.object-meta.xml
<CustomObject>
    <label>Enrollment</label>
    <nameField>
        <displayFormat>EN-{0}</displayFormat>
        <label>Enrollment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>