force-app/main/default/objects/Enrollment__c/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <label>Batch</label>
    <referenceTo>Batch__c</referenceTo>
    <relationshipLabel>Enrollment</relationshipLabel>
    <relationshipName>Enrollment</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>