force-app/main/default/objects/Enrollment__c/fields/EnrollingCourse__c.field-meta.xml
<CustomField>
    <fullName>EnrollingCourse__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>EnrollingCourse</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Enrollment</relationshipLabel>
    <relationshipName>Enrollment</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>