force-app/main/default/objects/Enrollment__c/fields/EnrollingDate__c.field-meta.xml
<CustomField>
    <fullName>EnrollingDate__c</fullName>
    <label>EnrollingDate</label>
    <required>true</required>
    <type>Date</type>
</CustomField>