force-app/main/default/objects/Enrollment__c/fields/EnrollingStudent__c.field-meta.xml
<CustomField>
    <fullName>EnrollingStudent__c</fullName>
    <label>EnrollingStudent</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Enrollment</relationshipLabel>
    <relationshipName>Enrollment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>