force-app/main/default/objects/Enrollment__c/fields/Receipt_Generated__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Generated__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Receipt Generated</label>
    <type>Checkbox</type>
</CustomField>