force-app/main/default/objects/Enrollment__c/fields/Tuition_Fees__c.field-meta.xml
<CustomField>
    <fullName>Tuition_Fees__c</fullName>
    <label>Tuition Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>