force-app/main/default/objects/Enrollment__c/validationRules/Enroll_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Enroll_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>EnrollingDate__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Enrollment Date cannot be future</errorMessage>
</ValidationRule>