force-app/main/default/objects/Enrollment__c/validationRules/Tution_Fees_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Tution_Fees_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Tuition_Fees__c &lt;= 0</errorConditionFormula>
    <errorMessage>Tuition Fees must be greater than 0</errorMessage>
</ValidationRule>